Refactor and exclude resources from server jar